--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,13 @@
-* {
-    box-sizing: border-box;
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
+    box-sizing: inherit;
 }
 
 body {
+    box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
     line-height: 1.4;
 }
